<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="GeofencingInfoButton">my Geofences</string>
    <string name="geofencing_expiration_time_0_value_toast">Please enter a time greater than 0s</string>
    <string name="geofencing_value_too_small_toast">Value must be at least 100</string>
    <string name="geofencing_wrong_data_type_toast">Please Enter a number</string>
    <string name="change_location_permissions">enable access</string>
    <string name="expiration_time_input_information">For how long should your geofence be existing?</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_alert_message">To use our geofencing feature we need to access your location. To use the geofencing feature of our app please change your location access permissions in your settings</string>
    <string name="radius_input_field_hint">Radius in meters</string>
    <string name="radius_input_information">Please enter a Radius of the geofence</string>
    <string name="Wipe_Tag_Alert">Are you sure you want to erase all data from this nfc tag?</string>
    <string name="feature_title">Feature:</string>
    <string name="time_title">Duration:</string>
    <string name="address_title">Address:</string>
    <string name="expiration_time_title">Expiration time</string>
    <string name="permission_alert_title">use Geofencing?</string>
    <string name="radius_title">Radius</string>
    <string name="str_Read_with_nfc">Read NFC Tag</string>
    <string name="str_Wipe_with_nfc">Wipe NFC Tag</string>
    <string name="str_Write_with_nfc">Write NFC Tag</string>
    <string name="NFC_disabled_Info">NFC is disabled</string>
    <string name="NFC_must_be_enabled_message">NFC must be enabled to use the key function of your application</string>
    <string name="Tag_wipe_success">Successfully wiped Tag !</string>
    <string name="Tag_write_error">Error Writing Message !</string>
    <string name="Tag_write_success">Successfully written to Tag !</string>
    <string name="add_task">add task</string>
    <string name="app_icon">App Icon</string>
    <string name="app_name">NFControl</string>
    <string name="attr">attribute</string>
    <string name="cancel">Don\'t wipe it</string>
    <string name="close">close</string>
    <string name="delete">delete</string>
    <string name="delete_dialog_positive_button">delete</string>
    <string name="delete_dialog_negative_button">edit</string>
    <string name="empty_tag">Empty Tag</string>
    <string name="h">H</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="attr_Message">Message</string>
    <string name="negative">Don\'t Enable NFC</string>
    <string name="next">Next</string>
    <string name="positive">Enable NFC</string>
    <string name="put_tag_behind_phone">put tag behind phone</string>
    <string name="sample_text">Sample Text</string>
    <string name="search">Search…</string>
    <string name="select_feature">Select a feature</string>
    <string name="set_timer">Set Timer</string>
    <string name="str_reading">Reading</string>
    <string name="switcheroo">Switch</string>
    <string name="task_procedure">TASK procedure</string>
    <string name="todo">todo</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false" tools:ignore="Typos">AIzaSyDmjg1GfxqjVmhrp-2QtTTOt7gznCQXGQE</string>
    <string name="on">1</string>
    <string name="off">0</string>
    <string name="app_store_web_application_redirect_URL">https://play.google.com/store/apps/details?id=</string>
    <string name="app_store_redirect_URL">market://details?id=</string>
    <string name="version_too_high_info">This function is not working on the newest version of android</string>
    <string name="geofence_added_toast">Geofence added</string>
    <string name="failed_add_geofence_toast">failed to add geofence</string>
    <string name="geofencing_transition_occurred">you\'\re in</string>
    <string name="map_not_loading_toast">map is not loading. Please try again later</string>
    <string name="no_place_selected_toast">please select a place on the map to continue</string>
    <string name="permission_denied_toast_info">Without the needed permissions, the geofencing feature will not be available</string>
    <string name="no_geofence_active_alert_message">Without the needed permissions, the geofencing feature will not be available</string>
    <string name="no_geofence_active_alert_title">No Geofences active</string>
    <string name="no_geofence_active_alert_positive_button">got it</string>
    <string name="no_geofence_active_alert_negative_button">cancel</string>
    <string name="please_enter_text_error">Please enter the text to write</string>
    <string name="version_not_compatible_info">This function is not working on this version of android</string>
    <string name="please_grant_location_persmissions_message">Please grant the required permissions to use the geofencing feature</string>
    <string name="request_multiple_permissions_button">continue</string>
    <string name="please_change_location_settings_message">Please change your Location settings to ALLOW ALL THE TIME to use the geofencing feature.</string>
</resources>
